--- a/Polly/package.json
+++ b/Polly/package.json
@@ -13,7 +13,9 @@
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-ionicons": "^4.6.3",
     "react-native-reanimated": "^1.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-tabs": "^2.5.6"
   },
