--- a/Polly/ios/Polly/Info.plist
+++ b/Polly/ios/Polly/Info.plist
@@ -72,5 +72,25 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>fb663104917551043</string>
+		</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>663104917551043</string>
+	<key>FacebookDisplayName</key>
+	<string>Polly</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
