--- a/Polly/package.json
+++ b/Polly/package.json
@@ -13,6 +13,7 @@
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-elements": "^1.2.7",
+    "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-ionicons": "^4.6.3",
     "react-native-reanimated": "^1.4.0",
