--- a/Polly/package.json
+++ b/Polly/package.json
@@ -26,12 +26,17 @@
     "@babel/runtime": "7.7.2",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "6.6.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.3",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "\\.js$": "<rootDir>/node_modules/babel-jest"
+    }
   }
 }
