docker-compose errything

--- a/backend/src/alembic.ini
+++ b/backend/src/alembic.ini
@@ -36,7 +36,7 @@ script_location = alembic
 # output_encoding = utf-8
 
 #TODO change this later on
-sqlalchemy.url = postgres:///polly
+sqlalchemy.url = postgresql://polly:polly-password@db/polly-prod
 
 
 [post_write_hooks]
