--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - DATABASE_URL=postgresql://polly:polly-password@db/polly-prod
     ports:
       - "5000:5000"
+    volumes:
+      - ./backend/:/app
     depends_on:
       - db
   db:
