move docker-compose yml and makefile to backend folder

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,6 +1,8 @@
+build:
+	docker-compose build
 
-server:
-	python src/server/server.py
+run:
+	docker-compose up
 
-test:
-	pytest
+clean:
+	docker volume rm ucla-cs-130_polly-data
