--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   backend:
-    build: ./backend
+    build: .
     image: polly/backend
     environment:
       - PYTHONUNBUFFERED=1
@@ -12,7 +12,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./backend/:/app
+      - ./:/app
   db:
     image: postgres
     ports:
