--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,18 +3,20 @@ FROM ubuntu:16.04
 RUN apt-get update -y && \
     apt-get install -y python3 python3-pip python3-dev libpq-dev
 
-COPY ./requirements.txt /app/requirements.txt
+COPY ./requirements.txt /polly/requirements.txt
 
-WORKDIR /app
+WORKDIR /polly
 
 RUN pip3 install -r requirements.txt
 
-COPY src test __init__.py  /app/
+COPY ./app /polly/app
 
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod 777 /usr/local/bin/docker-entrypoint.sh \
     && ln -s /usr/local/bin/docker-entrypoint.sh /
 
+COPY ./manage.py /polly
+
 # start server
 ENTRYPOINT ["docker-entrypoint.sh"]
-CMD [ "python3", "src/server/server.py" ]
+CMD [ "python3", "manage.py", "run" ]
