--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,37 @@
-Flask
-flask_sqlalchemy
-flask_migrate
-flask_script
-alembic
-flask_cors
-psycopg2
-gevent
-flask_restplus
+alembic==1.3.1
+aniso8601==8.0.0
+attrs==19.3.0
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-JWT-Extended==3.24.1
+Flask-Migrate==2.5.2
+flask-restplus==0.13.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
+gevent==1.4.0
+greenlet==0.4.15
+idna==2.8
+importlib-metadata==0.23
+itsdangerous==1.1.0
+jedi==0.15.1
+Jinja2==2.10.3
+jsonschema==3.2.0
+Mako==1.1.0
+MarkupSafe==1.1.1
+more-itertools==7.2.0
+parso==0.5.1
+psycopg2==2.8.4
+PyJWT==1.7.1
+pyrsistent==0.15.5
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2019.3
+requests==2.22.0
+six==1.13.0
+SQLAlchemy==1.3.11
+urllib3==1.25.7
+Werkzeug==0.16.0
+zipp==0.6.0
