--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - DATABASE_URL=postgresql://polly:polly-password@db/polly-prod
       - APP_ID=$APP_ID
       - APP_SECRET=$APP_SECRET
+      - JWT_SECRET_KEY=$JWT_SECRET_KEY
     ports:
       - "5000:5000"
     depends_on:
