--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ Flask-Migrate==2.5.2
 flask-restplus==0.13.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-Testing==0.7.1
 gevent==1.4.0
 greenlet==0.4.15
 idna==2.8
