--- a/Polly/package.json
+++ b/Polly/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-syntax-class-properties": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "6.6.0",
+    "flow-bin": "^0.112.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.3",
     "react-test-renderer": "16.9.0"
