--- a/Polly/package.json
+++ b/Polly/package.json
@@ -36,14 +36,18 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "6.6.0",
     "flow-bin": "^0.112.0",
-    "jest": "24.9.0",
+    "jest": "^24.9.0",
     "metro-react-native-babel-preset": "0.56.3",
+    "mock-async-storage": "^2.2.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native",
-    "transform": {
-      "\\.js$": "<rootDir>/node_modules/babel-jest"
-    }
+    "setupFiles": [
+      "./jest/jestSetupFile.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|react-navigation|@react-navigation/.*))"
+    ]
   }
 }
